styles.css
:root {
	/* font-size: 3vmin; */
	font-size: 2.6vmin;
	font-family: roboto;
	color: #717171
}
body {
	margin: 0;
	padding: 0;
	background-color: white;

	display: flex;
	flex-direction: column;
	justify-content: space-between;
	align-items: center;

	min-height: 100vh;
	box-sizing: border-box;
}
#background {
	z-index: -1;
	position: absolute;
	display: block;
	padding: 0;
	margin: 0;
	top: 0;
	width: 100%;
	box-sizing: border-box;
	height: auto;
	opacity: .8;
}
header {
	position: fixed;
	top: 0;
	padding: 1rem;
	display: flex;
	justify-content: space-between;
	/* justify-content: center; */
	align-items: center;
	width: 70%;
	box-sizing: border-box;

	/* background-color: white; */
	transition: .3s;
}
#heading {
	display: block;
	color: black;
	text-decoration: none;
	font-weight: bold;
	font-size: 1.5rem;
	padding: 0;
	margin: 0;
	transition: .3s;
}
/* #spacer {
	width: 20vw;
	height: 10px;
} */
.scrolled {
	padding: .5rem 1rem;
	width: 100%;
}
.scrolled #booking-btn, .scolled #back-btn {
	justify-content: flex-end;
}
.scrolled #heading {
	opacity: 0;
}
header div {
	display: flex;
	/* justify-content: flex-start; */
	justify-content: center;
	width: 10.4rem;
}
#icons {
	flex-direction: row-reverse;
}
.icon img {
	width: 2rem;
	height: 2rem;
	margin: .3rem;
	transition: .3s;
	-webkit-backface-visibility: hidden;
	outline: 1px solid transparent;
	user-select: none;
}
.icon img:hover {
	transform: scale(1.05);
	box-shadow: black;
}

.green-btn {
	display: block;
	border: 2px solid #1ED760;
	border-radius: 9999px;
	text-decoration: none;
	color: #1ED760;
	font-size: .6rem;
	padding: .5rem 1rem;
	font-weight: bold;
	transition: .2s;
}
.green-btn:hover {
	background-color: #1ED760;
	color: white;
}
.grey-btn {
	display: block;
	border: 2px solid grey;
	border-radius: 9999px;
	text-decoration: none;
	color: grey;
	font-size: .6rem;
	padding: .4rem 1rem;
	font-weight: bold;
	transition: .2s;
}
.grey-btn:hover {
	background-color: grey;
	color: white;
}


#title {
	display: flex;
	flex-direction: column;
	align-items: center;

	padding: 2rem;
}
#main {
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: flex-start;
	/* box-sizing: border-box; */

	/* smin-height: 20vh; */
	max-width: 100%;
	margin: 2rem;
	margin-top: 4rem;
}
#main div {
	padding: 1.7rem;
}
#content {
	max-width: 50%;
	margin-top: 0;
	padding-top: 0 !important;
}
#content img {
	max-width: 100%;
}
.flex-row {
	display: flex;
	align-items: center;
	justify-content: space-evenly;
	max-width: 100%;
	flex-wrap: wrap;
}
.flex-row * {
	flex: 1;
	padding: .5rem;
}
.flex-column {
	display: flex;
	flex-direction: column;
	align-items: center;
	justify-content: space-evenly;
	max-width: 100%;
	/* flex-wrap: wrap; */
}
.flex-column * {
	flex: 1;
}
/* img {
	width: auto;
	height: auto;
	max-width: 100%;
	max-height: 100%;
} */
h1 {
	font-size: 3rem;
	color: black;
	margin: .3rem;
}
h3 {
	font-weight: normal;
	padding: 0;
	margin: 0;
}
footer {
	font-size: .6rem;
	background-color: #dddddd;
	color: #888888;

	box-sizing: border-box;
	width: 100%;
	padding: 1rem 4.5rem;

	display: flex;
	justify-content: center;
}
footer span {
	margin: 0 .3rem;
}

.preload * {
	-webkit-transition: none !important;
	-moz-transition: none !important;
	-ms-transition: none !important;
	-o-transition: none !important;
	transition: none !important;
}
@font-face {
	font-family: roboto;
	src: url("fonts/roboto/Roboto-Regular.ttf")
}
@media only screen and (max-width: 1170px) {
	:root {
		font-size: 4vmin;
	}
	header {
		padding: .3rem 1rem;
		background-color: white;
		width: 100%;
	}
	#booking-btn, #back-btn {
		justify-content: flex-end;
	}
	.scrolled {
		box-shadow: 0 0.02rem 0.5rem lightgrey;
		/* padding: .3rem 2rem; */
	}
	.scrolled #heading {
		opacity: 1;
	}
	/* .scrolled #booking-btn, .scrolled #back-btn {
		justify-content: center;
	} */
	#content {
		max-width: 80%;
	}
}

